Implemented the GetClientWS contract
Implemented the GetClientWS contract and added a junit weld container
test with default concurrency enabled.

Added SOAP wsdl plugin dependency.

Refactored schema generation to target directory instead for schema
module.